# cmake-template-cpp-lib

./: .clang-format  CMakeLists.txt  Config.cmake.in  License.txt  mylib_config.h.in  mylib_version.h.in  readme.md  set_project_name.py
clr_wrapper/: AssemblyInfo.cpp.in  CMakeLists.txt
include/: mylib.h  mylib.hpp
include/mylib/: mylib.h  mylib.hpp  mylib_api.h
mylib.CLR/: AssemblyInfo.cpp.in  CMakeLists.txt  mylib.clr.cpp  mylib.clr.h
mylib.CLR/Test-mylib.CLR/: .gitignore  CMakeLists.txt  Program.cs  Test-mylib.CLR.csproj
src/: internal.cpp  internal.h  mylib.cpp
tests/: CMakeLists.txt  test_mylib.cpp
